# CodefestAdAstra2024

./: .gitignore  LICENSE  README.md  build.bat  build.sh  build_and_run.bat  build_and_run.sh  claves.txt
CodefestAdAstra2024/: CMakeLists.txt  CodefestAdAstra2024  DiffiePs.txt  encryp.data  imgKeys.txt  main.cpp
CodefestAdAstra2024.xcodeproj/: project.pbxproj
CodefestAdAstra2024.xcodeproj/xcuserdata/sebastian.urrea.xcuserdatad/xcschemes/: xcschememanagement.plist
CodefestAdAstra2024/images/: dogo_argento-1.txt  dogo_argento_2.txt  dogo_argento_3.txt  dogo_argento_4.txt
CodefestAdAstra2024/include/: GroundStation.hpp  Satellite.hpp  crypto.hpp  ground_station.hpp  satellite.hpp  udp_communication.hpp
CodefestAdAstra2024/src/: GroundStation.cpp  Satellite.cpp  claves.txt  crypto.cpp  main.cpp  satellite.cpp  tetero.cpp  udp_communication.cpp
Diagramas/: DiagraUML.drawio
groundStationSecrets/: imgKeys.txt
src2/: Satellite.h  goundStationPseudo.txt  main  main.cpp  satellitePseudo.txt
